--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,17 @@ dependencies = [
     "loguru>=0.7.3",
     "pydantic-settings>=2.9.1",
     "pydantic>=2.11.3",
-    "pytest>=8.3.5",
     "pytest-asyncio>=0.23.6",
     "httpx>=0.27.0",
     "ruff>=0.11.7",
     "python-dotenv>=1.0.1",
     "rich>=14.0.0",
     "requests>=2.32.3",
+    "marimo>=0.13.4",
+    "python-lsp-server>=1.12.2",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
 ]
